# rubinoxide

./: .gitignore  COPYRIGHT  Cargo.toml  Makefile  README.md  README.rst  SConstruct  pyproject.toml
doc/: conf.py  index.rst  manifest.yaml
doc/lsst.rubin.oxide/: index.rst
doc/lsst.rubin_oxide/: index.rst
include/lsst/rubin/: oxide.h
pylib/lsst/rubin_oxide/: __init__.py
pylib/rubin_oxide-0.1.0.dist-info/: METADATA  RECORD  direct_url.json
python/lsst/rubin/oxide/: __init__.py
python/lsst/rubinoxide/: __init__.py
src/: Starter.cc  diff_kernel.rs  lib.rs  rgb.rs  rgb_diffusion.rs  test_utils.rs
tests/: test_rgb.py
ups/: eupspkg.cfg.sh  rubin_oxide.cfg  rubin_oxide.table  rubinoxide.table
